* better Rakefile support, with version automatic extraction from README and
  better way to display tasks for default task. (no sh 'rake -T' now)
* fixed a bug in RailsPaginator, which ignored opts for count.

* change my nickname to binary string... for ruby-svn
* renamed test_helper to helper
* added multiruby test (from ZenTest) with ruby 1.8.6-p111, 1.9.0-0, svn



== ludy 0.1.8, 2008.01.31

* change the way displaying debug message

== ludy 0.1.7, 2008.01.31

* added preprocess_cpp tools, debug_hook and debug_include

== ludy 0.1.6, 2008.01.31

* make erubis don't trim...

== ludy 0.1.5, 2008.01.31

* fixed task preprocess:erubis presentation error.

== ludy 0.1.4, 2008.01.31

* added Page#begin and Page#end for real index in the data
* added Paginator#count for counter.call wrapper

* rename from Ludy::eout to Ludy::erbout
* added erubis support
* rename task from erb:preprocess to preprocess:erb and preprocess:erubis
* task preprocess would preprocess with erb and erubis
* rename PROJ to Project with open struct. use Project.name now

== ludy 0.1.3, 2008.01.23

* renamed next_page to next, and prev_page to prev
* added Page#page to get the page number of that page.
* added Ludy::eout to use in erb's block, see ludy/tasks/common.rb
  i would extract it to erb or somewhere else someday.
* better header_guard usage, with block

== ludy 0.1.2, 2008.01.17

* aims to add functional stuffs, list comprehension is working in progress
* Paginator series are added.
* more rdocs are added.

== ludy 0.1.1, 2008.01.10

* add Array#tail and Array#map_with_index to make the task of
  template forward parameters work again. (without depend on facets)

* add some todo notes.

== ludy 0.1.0, 2008.01.08

* directory structure rearranged
    now you would like to require something like:
    require 'ludy/proc/bind'
    require 'ludy/lazy'
    require 'ludy/kernel/defun'
    require 'puzzle_generator'
    ...
    the load path is now manipulated by ludy.rb, with require guard,