@@ -1,4 +1,4 @@
-= ludy 0.1.8
+= ludy 0.1.9
     by Lin Jen-Shin (a.k.a. godfat 真常)
     strip any number: 18god29fat7029 (at] godfat32 -dooot- 20org
     http://ludy.rubyforge.org
