@@ -12,7 +12,7 @@ require 'rake'
 module Ludy
 
   # :stopdoc:
-  VERSION = '0.1.8'
+  VERSION = '0.1.9'
   LIBPATH = ::File.expand_path(::File.dirname(__FILE__)) + ::File::SEPARATOR
   PATH = ::File.dirname(LIBPATH) + ::File::SEPARATOR
   $LOAD_PATH << LIBPATH
