@@ -1,0 +1,3 @@
+
+require 'ludy'
+Ludy.require_all_in 'hash'
