@@ -1,0 +1,6 @@
+
+module Kernel
+  def maybe
+    rand(2) == 0
+  end
+end
