@@ -3,9 +3,9 @@ require 'puzzle_generator/misc'
 require 'puzzle_generator/chain'
 require 'puzzle_generator/map'
 
+require 'ludy/kernel/deep_copy'
 require 'ludy/array/combine'
 require 'ludy/array/rotate'
-require 'ludy/kernel/deep_copy'
 require 'ludy/array/choice' # for Array#choice!
 require 'ludy/array/product' if RUBY_VERSION < '1.9.0'
 
